tdf#168423: Allow subnormals from strtod

dtoa sets ERANGE with subnormals. We need to support these, so check
for infinity and zero explicitly, and allow other results. NaNs can't
appear here.

Change-Id: I006a42ebff03b07d219b423c13bf8230348e1def
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/191071
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
(cherry picked from commit a3aaa11db039675252fe9d5bc4a9d43be34940e8)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/191295
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>